--- a/configuration.conf
+++ b/configuration.conf
@@ -6,13 +6,15 @@ objective = binary:logistic
 
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.1
+eta = 0.5
 # minimum loss reduction required to make a further partition
-gamma = 0.1
+gamma = 0.5
 # minimum sum of instance weight(hessian) needed in a child
 min_child_weight = 1
 # maximum depth of a tree
-max_depth = 5
+max_depth = 6
+
+eval_metric = "auc"
 
 # Task Parameters
 # the number of round to do boosting
