--- a/configuration_clk.conf
+++ b/configuration_clk.conf
@@ -22,8 +22,12 @@ num_round = 10
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "/Users/hideto/Desktop/e_data.txt.train"
+data = "/Users/hideto/Desktop/e_data.txt.trainclk"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "/Users/hideto/Desktop/e_data.txt.test"
+eval[test] = "/Users/hideto/Desktop/e_data.txt.testclk"
 # The path of test data
-test:data = "/Users/hideto/Desktop/e_data.txt.test"
+test:data = "/Users/hideto/Desktop/e_data.txt.testclk"
+
+name_pred = "pred_clk.txt"
+model_out = "clk_mdl.model"
+model_in = "clk_mdl.model"
