--- a/configuration_buy.conf
+++ b/configuration_buy.conf
@@ -22,11 +22,11 @@ num_round = 10
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "/Users/hideto/Desktop/e_data.txt.trainbuy"
+data = "e_data.txt.trainbuy"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "/Users/hideto/Desktop/e_data.txt.testbuy"
+eval[test] = "e_data.txt.testbuy"
 # The path of test data
-test:data = "/Users/hideto/Desktop/e_data.txt.testbuy"
+test:data = "e_data.txt.testbuy"
 
 name_pred = "pred_buy.txt"
 model_out = "buy_mdl.model"
