--- a/configuration_clk.conf
+++ b/configuration_clk.conf
@@ -22,11 +22,11 @@ num_round = 10
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "/Users/hideto/Desktop/e_data.txt.trainclk"
+data = "e_data.txt.trainclk"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "/Users/hideto/Desktop/e_data.txt.testclk"
+eval[test] = "e_data.txt.testclk"
 # The path of test data
-test:data = "/Users/hideto/Desktop/e_data.txt.testclk"
+test:data = "e_data.txt.testclk"
 
 name_pred = "pred_clk.txt"
 model_out = "clk_mdl.model"
