--- a/configuration_clk.conf
+++ b/configuration_clk.conf
@@ -1,6 +1,7 @@
 # General Parameters, see comment for each definition
 # can be gbtree or gblinear
 booster = gbtree
+# booster = gblinear
 # choose logistic regression loss function for binary classification
 objective = binary:logistic
 
@@ -12,15 +13,28 @@ gamma = 0.2
 # minimum sum of instance weight(hessian) needed in a child
 min_child_weight = 1
 # maximum depth of a tree
-max_depth = 6
+max_depth = 8
+# max_delta_step = 5
+
+# l0
+# alpha = 0.00001
+# l1
+# lambda = 1
+# lambda_bias = 0.5
 
 eval_metric = "auc"
 
 # Task Parameters
 # the number of round to do boosting
-num_round = 20
+num_round = 30
 # 0 means do not save any model except the final round model
 save_period = 0
+
+
+
+
+
+
 # The path of training data
 data = "e_data.txt.trainclk"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
