--- a/configuration_clk.conf
+++ b/configuration_clk.conf
@@ -9,24 +9,24 @@ objective = binary:logistic
 # step size shrinkage
 eta = 0.1
 # minimum loss reduction required to make a further partition
-gamma = 0.4
+gamma = 0.5
 # minimum sum of instance weight(hessian) needed in a child
-min_child_weight = 1
+min_child_weight = 0.1
 # maximum depth of a tree
-max_depth = 8
-# max_delta_step = 5
+max_depth = 6
+max_delta_step = 2
 
 # l0
-# alpha = 0.00001
+# alpha = 1
 # l1
-# lambda = 1
-# lambda_bias = 0.5
+lambda = 0.1
+lambda_bias = 0.2
 
 eval_metric = "auc"
 
 # Task Parameters
 # the number of round to do boosting
-num_round = 30
+num_round = 50
 # 0 means do not save any model except the final round model
 save_period = 0
 
